# PICO-Diginterface

./: LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
firmware/: CMakeLists.txt  adc_correction.h  adc_input.c  adc_input.h  audio_pdm_output.c  audio_pdm_output.h  main.c  pdm_output.pio  ptt.c  ptt.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h
firmware/patches/: dcd_rp2040.c  rp2040_usb.c  rp2040_usb.h
hardware/PCB/Gerber_PCB1_2026-05-26/: Drill_PTH_Through.DRL  FlyingProbeTesting.json  Gerber_BoardOutlineLayer.GKO  Gerber_BottomLayer.GBL  Gerber_BottomSilkscreenLayer.GBO  Gerber_BottomSolderMaskLayer.GBS  Gerber_DocumentLayer.GDL  Gerber_DrillDrawingLayer.GDD  Gerber_TopAssemblyLayer.GTA  Gerber_TopLayer.GTL  Gerber_TopSilkscreenLayer.GTO  Gerber_TopSolderMaskLayer.GTS
hardware/PICO-Diginterface/: PICO-Digin-easyedapro.kicad_sym  PICO-Diginterface.kicad_pcb  PICO-Diginterface.kicad_prl  PICO-Diginterface.kicad_pro  PICO-Diginterface.kicad_sch  ProPrj_PIC-easyedapro.kicad_sym  sym-lib-table
